--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Number Classifier</title>
+    <title>Driver drowsiness detection</title>
     <link rel="stylesheet" href="./static/stylesheet.css">
 </head>
 <body>
@@ -29,7 +29,7 @@
 
     <footer>
         <img class="footer_img" src="https://aidemyexstorage.blob.core.windows.net/aidemycontents/1621500180546399.png" alt="Aidemy">
-        <small>&copy; 2019 Aidemy, inc.</small>   
+        <small>&copy; 2024 DDD, inc.</small>   
     </footer>
 </body>
 </html>
