--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Driver drowsiness detection</title>
+    <title>Driver Drowsiness Detection</title>
     <link rel="stylesheet" href="./static/stylesheet.css">
 </head>
 <body>
     <header>   
         <img class="header_img" src="https://aidemyexstorage.blob.core.windows.net/aidemycontents/1621500180546399.png" alt="Aidemy">
-        <a class="header-logo" href="#">Driver drowsiness detection</a>
+        <a class="header-logo" href="#">Driver Drowsiness Detection</a>
     </header>
 
     <div class="main">    
