--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,11 @@
 <body>
     <header>   
         <img class="header_img" src="https://aidemyexstorage.blob.core.windows.net/aidemycontents/1621500180546399.png" alt="Aidemy">
-        <a class="header-logo" href="#">Driver Drowsiness Detection</a>
+        <a class="header-logo" href="#">Driver Drowsiness Detection(V0.1)</a>
     </header>
 
     <div class="main">    
-        <h2> アップロードした顔画像群の眠気度（危険度）を判定します</h2>
+        <h2> ドライバー（作業者）の連続した顔画像をアップロードし眠気度（危険度）を判定します</h2>
         <p>画像を送信してください</p>
         <form method="POST" enctype="multipart/form-data">
             <!-- <input class="file_choose" type="file" name="file"> -->
